Started working on VS2015 CUDA 8.0 build but LevelDB is not ready

--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,9 @@ MANIFEST-*
 *.opensdf
 *.pdb
 *.props
+
+# VS 2015 files and folders
+windows/Backup/
+windows/Caffe.VC.db
+windows/UpgradeLog.htm
+windows/packages/
