--- a/windows/convert_mnist_siamese_data/packages.config
+++ b/windows/convert_mnist_siamese_data/packages.config
@@ -1,12 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="boost" version="1.59.0.0" targetFramework="Native" />
-  <package id="boost_chrono-vc120" version="1.59.0.0" targetFramework="Native" />
+  <package id="boost_chrono-vc140" version="1.59.0.0" targetFramework="native" />
   <package id="boost_date_time-vc120" version="1.59.0.0" targetFramework="Native" />
-  <package id="boost_filesystem-vc120" version="1.59.0.0" targetFramework="Native" />
+  <package id="boost_date_time-vc140" version="1.59.0.0" targetFramework="native" />
+  <package id="boost_filesystem-vc140" version="1.59.0.0" targetFramework="native" />
+  <package id="boost_python" version="1.59.0.0" targetFramework="native" />
   <package id="boost_python2.7-vc120" version="1.59.0.0" targetFramework="Native" />
   <package id="boost_system-vc120" version="1.59.0.0" targetFramework="Native" />
+  <package id="boost_system-vc140" version="1.59.0.0" targetFramework="native" />
   <package id="boost_thread-vc120" version="1.59.0.0" targetFramework="Native" />
+  <package id="boost_thread-vc140" version="1.59.0.0" targetFramework="native" />
   <package id="gflags" version="2.1.2.1" targetFramework="Native" />
   <package id="glog" version="0.3.3.0" targetFramework="Native" />
   <package id="hdf5-v120-complete" version="1.8.15.2" targetFramework="Native" />
